--- a/Esercitazione2/index.html
+++ b/Esercitazione2/index.html
@@ -10,7 +10,7 @@
   <header>
 
     <h1>Il mio viaggio a Londra</h1>
-    <img src="../img/londra.png" alt="cazzp">
+    <img src="img/londra.png" alt="cazzp">
   </header>
     <hr>
 
