--- a/9Esercitazione/index.html
+++ b/9Esercitazione/index.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
     <title></title>
   </head>
@@ -22,7 +25,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="card coppe">
+      <div id="open" class="card coppe">
         <span>Coppe</span>
       </div>
       <div class="card coppe">
