Aggiunta link funzionali città

--- a/12Esercizio/index.html
+++ b/12Esercizio/index.html
@@ -15,18 +15,17 @@
       </div>
       <div class="city">
         <img src="img/roma.jpg" alt="roma">
-        <a href="#"><h1>ROMA</h1></a>
+        <a href="https://www.comune.roma.it/web/it/welcome.page" target="_blank"><h1>ROMA</h1></a>
 
       </div>
       <div class="city">
         <img src="img/copenaghen.jpg" alt="copenaghen">
-        <a href="#"><h1>COPENAGHEN</h1></a>
+        <a href="https://www.10cose.it/copenaghen/cosa-vedere-copenaghen" target="_blank"><h1>COPENAGHEN</h1></a>
 
       </div>
       <div class="city">
         <img src="img/tokyo.jpg" alt="tokyo">
-        <a href="#"><h1>TOKYO</h1></a>
-
+        <a href="https://www.gotokyo.org/it/index.html" target="_blank"><h1>TOKYO</h1></a>
       </div>
 
     </main>
